# devpilot

./: .clang-format  .gitignore  CONTRIBUTING.md  README.md  codecov.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cmake-compatibility.yml  release.yml
devpilot/: .gitignore  CMakeLists.txt  README.md  build.sh
devpilot/include/: parser.hpp  storage.hpp  symbol.hpp
devpilot/sample_projects/cpp_example/: calculator.cpp  calculator.hpp  main.cpp
devpilot/src/: main.cpp  parser.cpp  storage.cpp  symbol.cpp
devpilot/tests/: CMakeLists.txt  test_basic.cpp
scripts/: test-workflows.sh  validate-ci.sh
